# py-xl-sindy-data-visualisation

./: .gitignore  Manual_analysis.md  README.md  analysis_results.txt  automatic_align_results.json  copy_eps_to_thesis.sh  copy_svg_to_presentation.sh  create-data-release.sh  failed_experiments_commands.txt  generate_failed_commands.py  plot_command.sh  ranking_analysis.csv  ranking_report.txt  result.md  result_database_20251224  upload-data.sh
data_generation/: README.md  align_list.sh  align_test.sh  auto_align.sh  automatic_align_list.sh  complete_for_paper.sh  generate_all_experiments.sh  generate_list.sh  generate_list_v2.sh  helper.md  pyproject.toml  rough_test.py  rough_test_2.py  rough_test_3.py  test_align_v2.sh
data_generation/mujoco_align_data/cart_pole/: xlsindy_gen.py
data_generation/mujoco_align_data/cart_pole_double/: xlsindy_gen.py
data_generation/mujoco_align_data/double_pendulum_pm/: xlsindy_gen.py
data_generation/result_util/: count_categories.py  find_best_trajectories.py  plot_experiment_trajectories.py  plot_main.py  plot_util.py
data_generation/script/: align_data.py  analyze_database.py  analyze_database_ranking.py  analyze_results.py  automatic_align.py  create_generate_experiment_file.py  dataclass.py  generate_data.py  generate_manifest.py  generate_trajectory.py  ranking_analysis.py  result_database.py  strip_json.py  strip_uid_experiments.py  util.py
data_generation/script/v1/: README_automatic_align.md  align_data.py  generate_data.py  regression_time_analysis.py
data_generation/script/v2/: align_data.py  analyze_results.py  automatic_align.py  create_generate_experiment_file.py  dataclass.py  generate_data.py  (+3 more)
data_generation/util/: analyze_database_ranking.py  find_valid_experiments.py  find_valid_experiments_relaxed.py  json_to_schema.py  plot_script.sh  plot_util.py  plot_validation_comparison.py  plot_validation_comparison_by_system.py  plot_validation_comparison_combined.py  plot_validation_comparison_combined_by_system.py  plot_validation_gpos_refined.py  plot_validation_qpos.py  plot_validation_qpos_v2.py  select_best_results.py  show_palette.py
data_real/: gather_data.py  generate_trajectory.py  hebi_test.py  main.py  pyproject.toml  regression_on_data.py
presentation/manim_project/: .gitignore  .manim-slides.toml  main.py  pyproject.toml
(+74 files in other folders)
