[project]
name = "py-xl-sindy-data-generation"
version = "0.1.0"
description = "The data generation utilitary of the py-xl-sindy library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "mujoco>=3.3.5",
    "pandas>=2.3.2",
    "py-xl-sindy[gpu]",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "tyro>=0.9.28",
]

[tool.uv.sources]
py-xl-sindy = { path = "../../py-xl-sindy" }
