[project]
name = "manim-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manim",
    "manim-slides>=5.5.3",
    "opencv-python>=4.13.0.90",
    "pyqt6>=6.10.2",
]

[tool.uv.sources]
manim = { path = "../../../manim-0.19.1" }


